# Music-Perception-Toolbox

./: CHANGELOG.md  CITATION.cff  LICENSE  MIGRATION.md  MarkovN.m  MarkovS.m  README.md  USER_GUIDE.md  bal.m  circApm.m  circConv.m  coherence.m  contextProbeSpecSim.m  cosSim.m  cosSimExpTens.m  dft2sss.m  edges.m  eve.m  expTensorDist.m  expTensorEntropy.m  expTensorSim.m  expectationTensor.m  fSetRoughness.m  gaussianKernel.m  histEntropy.m  ind2Pitch.m  markovS.m  modeHeight.m  nTetAffinity.m  nTetSim.m  nTets.m  noiseSignal.m  nonLinDps.m  pDist.m  pSetSpectralEntropy.m  peakPicker.m  pitch2Argand.m  pitch2Ind.m  projCent.m  rAdEntropy.m  (+7 more)
Tutorials/: TonesSpectralSims.m  audioFundamentals.m  audioRoughHarmEntropy.m  idealFundamentals.m  idealRoughHarmEntropy.m
Tutorials/AudioFiles/: audioRoughHarmEntropy.m
matlab/: addSpectra.m  audioPeaks.m  balanceCircular.m  batchCosSimExpTens.m  bindEvents.m  buildExpTens.m  circApm.m  coherence.m  continuity.m  convertPitch.m  cosSimExpTens.m  dftCircular.m  dftCircularSimulate.m  differenceEvents.m  edges.m  entropyExpTens.m  estimateCompTime.m  evalExpTens.m  evennessCircular.m  markovS.m  meanOffset.m  nTupleEntropy.m  positionVariance.m  projCentroid.m  roughness.m  sameness.m  seqWeights.m  simplexVertices.m  spectralEntropy.m  templateHarmonicity.m  tensorHarmonicity.m  virtualPitches.m  windowTensor.m  windowedSimilarity.m
matlab/demos/: demo_audioAnalysis.m  demo_batchProcessing.m  demo_bindEvents.m  demo_dftCircularSimulate.m  demo_edoApprox.m  demo_expTensorPlots.m  demo_genChainSpcs.m  demo_helixBlend.m  demo_maetWindowing.m  demo_overview.m  demo_sigmaSpace.m  demo_triadConsonance.m  demo_triadSpcsGrid.m  demo_virtualPitches.m  demo_windowingReference.m
matlab/tests/: test_mpt.m
python/: pyproject.toml
python/demos/: demo_audio_analysis.py  demo_batch_processing.py  demo_bindEvents.py  demo_dft_circular_simulate.py  demo_edo_approx.py  demo_exp_tensor_plots.py  demo_gen_chain_spcs.py  demo_helix_blend.py  demo_maet_windowing.py  demo_overview.py  demo_sigma_space.py  demo_triad_consonance.py  demo_triad_spcs_grid.py  demo_virtual_pitches.py  demo_windowing_reference.py
python/mpt/: __init__.py  _utils.py  audio.py  circular.py  convert.py  entropy.py  harmony.py  serial.py  spectra.py  tensor.py
python/tests/: test_mpt.py
